--- a/src/Pages/User/Style/Style.css
+++ b/src/Pages/User/Style/Style.css
@@ -4,6 +4,12 @@
     color: #CBA971;
     font-family: Ubuntu;
 }
+.title_h3{
+    font-size: 30px;
+    font-weight: 500;
+    color: #CBA971;
+    font-family: Ubuntu;
+}
 .title_h4{
     font-size: 25px;
     font-weight: 500;
@@ -17,4 +23,10 @@
     border-radius: 50%;
     border: 1px solid #CBA971;
     box-shadow : 0px 0px 5px #CBA971;
+}
+
+.image_profile{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
